Closed
Bug 343532
Opened 19 years ago
Closed 19 years ago
Spellchecker crashes when deleting content in gmail message body [@ FindNextNode]
Categories
(Core :: Spelling checker, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: roc)
References
Details
(4 keywords)
Crash Data
Attachments
(1 file)
|
2.19 KB,
patch
|
mscott
:
review+
mscott
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
Compose mail in gmail
Enter a single character in the message body
Delete it
This is the top of the stack:
#0 0x40e1fc7d in FindNextNode ()
from /home/simon/mozwork/ff/mozilla/obj-ff-opt/dist/bin/components/libspellchecker.so
#1 0x40e20c5e in mozInlineSpellWordUtil::BuildSoftText ()
from /home/simon/mozwork/ff/mozilla/obj-ff-opt/dist/bin/components/libspellchecker.so
#2 0x40e1ff24 in mozInlineSpellWordUtil::EnsureWords ()
from /home/simon/mozwork/ff/mozilla/obj-ff-opt/dist/bin/components/libspellchecker.so
#3 0x40e20024 in mozInlineSpellWordUtil::GetRangeForWord ()
from /home/simon/mozwork/ff/mozilla/obj-ff-opt/dist/bin/components/libspellchecker.so
#4 0x40e1c540 in mozInlineSpellChecker::SpellCheckAfterEditorChange ()
from /home/simon/mozwork/ff/mozilla/obj-ff-opt/dist/bin/components/libspellchecker.so
#5 0x08744a71 in nsEditor::HandleInlineSpellCheck ()
#6 0x086f6b3d in nsHTMLEditRules::AfterEditInner ()
#7 0x086f66a5 in nsHTMLEditRules::AfterEdit ()
#8 0x086e8d46 in nsHTMLEditor::EndOperation ()
#9 0x08730cab in nsPlaintextEditor::DeleteSelection ()
#10 0x08737316 in nsTextEditorKeyListener::KeyPress ()
Comment 2•19 years ago
|
||
This still happens even with roc's patch that fixed the balsa bustage?
Severity: major → critical
Summary: Spellchecker crashes when deleting content in gmail message body → Spellchecker crashes when deleting content in gmail message body [@ FindNextNode]
| Reporter | ||
Comment 3•19 years ago
|
||
Yes, I have that patch in my tree and it still happens
| Assignee | ||
Comment 4•19 years ago
|
||
Simple fix ... we need to stop earlier when looking for the next node, when aNode is the root node and has no children --- before we look for siblings or try to navigate upwards.
Assignee: mscott → roc
Status: NEW → ASSIGNED
Attachment #228078 -
Flags: superreview?
Attachment #228078 -
Flags: review?
| Assignee | ||
Updated•19 years ago
|
Attachment #228078 -
Flags: superreview?(mscott)
Attachment #228078 -
Flags: superreview?
Attachment #228078 -
Flags: review?(mscott)
Attachment #228078 -
Flags: review?
Comment 5•19 years ago
|
||
Comment on attachment 228078 [details] [diff] [review]
fix
thanks Roc.
Attachment #228078 -
Flags: superreview?(mscott)
Attachment #228078 -
Flags: superreview+
Attachment #228078 -
Flags: review?(mscott)
Attachment #228078 -
Flags: review+
Updated•19 years ago
|
Blocks: SpellCheckTracking
| Assignee | ||
Comment 6•19 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•19 years ago
|
||
I landed the fix for this along with the rest of the fix for bug 339066 on the 1.8.1 branch.
Keywords: fixed1.8.1
Comment 8•19 years ago
|
||
*** Bug 343748 has been marked as a duplicate of this bug. ***
Comment 9•19 years ago
|
||
*** Bug 343742 has been marked as a duplicate of this bug. ***
Comment 10•19 years ago
|
||
*** Bug 343656 has been marked as a duplicate of this bug. ***
Comment 11•19 years ago
|
||
verified on the 1.8 branch using the Thunderbird Linux candidate build, version 2.0.0.0 (20070326). I followed the STR in Simon's initial report. Adding verified keyword.
Keywords: verified1.8.1.3
Updated•14 years ago
|
Crash Signature: [@ FindNextNode]
You need to log in
before you can comment on or make changes to this bug.
Description
•