Bug 343532. Fix crasher when calling FindNextNode on the root node. r+sr=mscott